local/logs/project.log
2020-06-09T02:19:49.698Z - normal: Load ~/.CocosCreator/settings.json
2020-06-09T02:19:49.747Z - normal: Initializing Asset Database
2020-06-09T02:19:49.751Z - normal: checking language setting...
2020-06-09T02:19:49.751Z - normal: Language: zh
2020-06-09T02:19:50.666Z - success: preview server running at http://localhost:7456
2020-06-09T02:19:50.685Z - success: protocol editor-framework registered
2020-06-09T02:19:50.685Z - success: protocol app registered
2020-06-09T02:19:50.685Z - success: protocol theme registered
2020-06-09T02:19:50.685Z - success: protocol packages registered
2020-06-09T02:19:50.685Z - success: protocol uuid registerred
2020-06-09T02:19:50.686Z - success: protocol db registerred
2020-06-09T02:19:50.686Z - success: protocol thumbnail registerred
2020-06-09T02:19:50.686Z - success: protocol unpack registerred
2020-06-09T02:19:50.686Z - success: protocol disable-commonjs registerred
2020-06-09T02:19:50.843Z - normal: connected!
2020-06-09T02:19:50.844Z - normal: Check project D:\cocosgame\HunXter
2020-06-09T02:19:50.850Z - normal: Initializing project D:\cocosgame\HunXter
2020-06-09T02:19:50.865Z - success: adapters loaded
2020-06-09T02:19:50.868Z - success: asset-db-debugger loaded
2020-06-09T02:19:50.920Z - success: fb-audience-network loaded
2020-06-09T02:19:50.945Z - success: fb-live-stream loaded
2020-06-09T02:19:50.948Z - success: google-play-instant loaded
2020-06-09T02:19:50.949Z - success: huawei-adapter loaded
2020-06-09T02:19:50.949Z - success: jkw-adapter loaded
2020-06-09T02:19:50.949Z - success: jsb-adapter loaded
2020-06-09T02:19:50.950Z - success: oppo-adapter loaded
2020-06-09T02:19:50.953Z - success: package-manager loaded
2020-06-09T02:19:50.954Z - success: qtt-adapter loaded
2020-06-09T02:19:50.956Z - success: runtime-dev-tools loaded
2020-06-09T02:19:50.960Z - success: sdkbox loaded
2020-06-09T02:19:50.962Z - success: ui-kit-preview-extra loaded
2020-06-09T02:19:50.964Z - success: ui-kit-preview loaded
2020-06-09T02:19:50.964Z - success: vivo-adapter loaded
2020-06-09T02:19:51.007Z - success: alipay-minigame loaded
2020-06-09T02:19:51.067Z - success: assets loaded
2020-06-09T02:19:51.069Z - success: baidugame-opendata loaded
2020-06-09T02:19:51.071Z - success: baidugame loaded
2020-06-09T02:19:51.073Z - success: builder loaded
2020-06-09T02:19:51.076Z - success: cloud-function loaded
2020-06-09T02:19:51.206Z - success: cocos-services loaded
2020-06-09T02:19:51.208Z - success: console loaded
2020-06-09T02:19:51.210Z - success: curve-editor loaded
2020-06-09T02:19:51.222Z - success: fb-instant-games loaded
2020-06-09T02:19:51.224Z - success: game-window loaded
2020-06-09T02:19:51.224Z - success: google-instant-games loaded
2020-06-09T02:19:51.226Z - success: hierarchy loaded
2020-06-09T02:19:51.229Z - success: huawei-runtime loaded
2020-06-09T02:19:51.230Z - success: inspector loaded
2020-06-09T02:19:51.295Z - success: cpk-publish loaded
2020-06-09T02:19:51.295Z - success: keystore loaded
2020-06-09T02:19:51.302Z - success: node-library loaded
2020-06-09T02:19:51.303Z - success: open-recent-items loaded
2020-06-09T02:19:51.305Z - success: oppo-runtime loaded
2020-06-09T02:19:51.306Z - success: package-asset loaded
2020-06-09T02:19:51.307Z - success: preferences loaded
2020-06-09T02:19:51.308Z - success: project-importer loaded
2020-06-09T02:19:51.309Z - success: project-settings loaded
2020-06-09T02:19:51.321Z - success: qtt-runtime loaded
2020-06-09T02:19:51.323Z - success: scene loaded
2020-06-09T02:19:51.324Z - success: simulator-debugger loaded
2020-06-09T02:19:51.324Z - success: sprite-editor loaded
2020-06-09T02:19:51.348Z - success: store loaded
2020-06-09T02:19:51.350Z - success: timeline loaded
2020-06-09T02:19:51.353Z - success: vivo-runtime loaded
2020-06-09T02:19:51.355Z - success: wechatgame-opendata loaded
2020-06-09T02:19:51.357Z - success: wechatgame loaded
2020-06-09T02:19:51.360Z - success: xiaomi-runtime loaded
2020-06-09T02:19:51.501Z - success: im-plugin loaded
2020-06-09T02:19:52.994Z - normal: Initializing Cocos2d
2020-06-09T02:19:53.391Z - normal: Initializing engine extends
2020-06-09T02:19:54.481Z - info: Cocos Service load base data!
2020-06-09T02:19:58.168Z - normal: Loading packages
2020-06-09T02:19:58.172Z - normal: Watching packages
2020-06-09T02:19:58.232Z - normal: Run Application
2020-06-09T02:38:29.207Z - failed: [db-task][sync-changes] Failed to import asset D:\cocosgame\HunXter\assets\scripts\GetMap.js, message: Compile error: SyntaxError: D:\cocosgame\HunXter\assets\scripts\GetMap.js: Unexpected token, expected "," (20:2)

  18 | 			type: cc.Prefab,
  19 | 		}
> 20 | 		map: null,
     | 		^
  21 |         // foo: {
  22 |         //     // ATTRIBUTES:
  23 |         //     default: null,        // The default value will be used only when the component attaching
    at Parser._raise (D:\CocosDashboard_1.0.6\resources\.editors\Creator\2.3.4\resources\app.asar\node_modules\@babel\parser\lib\index.js:742:17)
    at Parser.raiseWithData (D:\CocosDashboard_1.0.6\resources\.editors\Creator\2.3.4\resources\app.asar\node_modules\@babel\parser\lib\index.js:735:17)
    at Parser.raise (D:\CocosDashboard_1.0.6\resources\.editors\Creator\2.3.4\resources\app.asar\node_modules\@babel\parser\lib\index.js:729:17)
    at Parser.unexpected (D:\CocosDashboard_1.0.6\resources\.editors\Creator\2.3.4\resources\app.asar\node_modules\@babel\parser\lib\index.js:8779:16)
    at Parser.expect (D:\CocosDashboard_1.0.6\resources\.editors\Creator\2.3.4\resources\app.asar\node_modules\@babel\parser\lib\index.js:8765:28)
    at Parser.parseObj (D:\CocosDashboard_1.0.6\resources\.editors\Creator\2.3.4\resources\app.asar\node_modules\@babel\parser\lib\index.js:10387:14)
    at Parser.parseExprAtom (D:\CocosDashboard_1.0.6\resources\.editors\Creator\2.3.4\resources\app.asar\node_modules\@babel\parser\lib\index.js:10017:28)
    at Parser.parseExprSubscripts (D:\CocosDashboard_1.0.6\resources\.editors\Creator\2.3.4\resources\app.asar\node_modules\@babel\parser\lib\index.js:9624:23)
    at Parser.parseMaybeUnary (D:\CocosDashboard_1.0.6\resources\.editors\Creator\2.3.4\resources\app.asar\node_modules\@babel\parser\lib\index.js:9604:21)
    at Parser.parseExprOps (D:\CocosDashboard_1.0.6\resources\.editors\Creator\2.3.4\resources\app.asar\node_modules\@babel\parser\lib\index.js:9474:23)
